--- a/crewards-v2/src/index.css
+++ b/crewards-v2/src/index.css
@@ -71,11 +71,45 @@ button:focus-visible {
 @tailwind components;
 @tailwind utilities;
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+@keyframes spin-y {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
 
-.animate-spin {
-  animation: spin 6s linear infinite; /* Duração e tipo de animação */
+@keyframes sway-left-right {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
+}
+
+/* mini images */
+.animate-spin-y {
+  animation: spin-y 12s linear infinite;
+  transform-style: preserve-3d;
+}
+
+.animate-sway {
+  animation: sway-left-right 4s ease-in-out infinite alternate;
+}
+
+.animate-sway-slow {
+  animation: sway-left-right 8s ease-in-out infinite alternate;
+}
+
+.glow-effect {
+  filter: drop-shadow(0 0 20px rgba(255, 0, 0, 0.9)); /* Red glow */
+}
+
+.glow-effect-text {
+  text-shadow: 0 0 5px rgba(255, 0, 0, 0.9); /* Glow effect for text*/
 }
