--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -157,6 +157,32 @@ button:focus-visible {
   }
 }
 
+.progress-container {
+  width: 100%;
+  height: 20px;
+  background-color: #cccccc; /* Cor de fundo da barra vazia */
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.progress-bar {
+  height: 100%;
+  border-radius: 10px;
+  background: linear-gradient(to right, #d88667, #f4d4b4); /* Inicialmente cinza */
+  transition: width 0.3s ease; /* Transição suave */
+}
+
+.percentage-labels {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+
+.percentage-labels span {
+  font-size: 12px;
+}
+
 /* Aplicar a animação ao texto */
 .glow-effect-text-2 {
   animation: color-shift 2s infinite alternate;
@@ -201,12 +227,95 @@ button:focus-visible {
   animation: sway-left-right 8s ease-in-out infinite alternate;
 }
 
+/* Efeitos de glow para cada tier */
+.glow-wood {
+  filter: drop-shadow(0 0 14px rgba(216, 134, 103, 0.9)); /* Glow para o tier wood */
+}
+
+.glow-bronze {
+  filter: drop-shadow(0 0 14px rgba(244, 212, 180, 0.9)); /* Glow para o tier bronze */
+}
+
+.glow-silver {
+  filter: drop-shadow(0 0 14px rgba(180, 188, 196, 0.9)); /* Glow para o tier silver */
+}
+
+.glow-gold {
+  filter: drop-shadow(0 0 14px rgba(240, 215, 127, 0.9)); /* Glow para o tier gold */
+}
+
+.glow-platinum {
+  filter: drop-shadow(0 0 14px rgba(172, 180, 219, 0.9)); /* Glow para o tier platinum */
+}
+
+.glow-jade {
+  filter: drop-shadow(0 0 14px rgba(89, 246, 88, 0.9)); /* Glow para o tier jade */
+}
+
+.glow-sapphire {
+  filter: drop-shadow(0 0 14px rgba(116, 139, 252, 0.9)); /* Glow para o tier sapphire */
+}
+
+.glow-ruby {
+  filter: drop-shadow(0 0 14px rgba(252, 65, 73, 0.9)); /* Glow para o tier ruby */
+}
+
+.glow-diamond {
+  filter: drop-shadow(0 0 14px rgba(86, 213, 252, 0.9)); /* Glow para o tier diamond */
+}
+
+/* Efeitos de glow para cada tier CSGOEMPIRE*/
+.glow-rank-rust {
+  filter: drop-shadow(0 0 14px rgba(156, 132, 116, 0.9)); /* Glow para o tier wood */
+}
+
+.glow-rank-bronze {
+  filter: drop-shadow(0 0 14px rgba(213, 160, 108, 0.9)); /* Glow para o tier bronze */
+}
+
+.glow-rank-silver {
+  filter: drop-shadow(0 0 14px rgba(206, 215, 229, 0.9)); /* Glow para o tier silver */
+}
+
+.glow-rank-gold {
+  filter: drop-shadow(0 0 14px rgba(221, 187, 86, 0.9)); /* Glow para o tier gold */
+}
+
+.glow-rank-diamond {
+  filter: drop-shadow(0 0 14px rgba(123, 228, 252, 0.9)); /* Glow para o tier platinum */
+}
+
+.glow-rank-uranium {
+  filter: drop-shadow(0 0 14px rgba(99, 241, 36, 0.9)); /* Glow para o tier jade */
+}
+
+.glow-rank-unbreakable {
+  filter: drop-shadow(0 0 14px rgba(250, 71, 25, 0.9)); /* Glow para o tier sapphire */
+}
+
+/* Outros efeitos */
+
 .glow-effect {
   filter: drop-shadow(0 0 20px rgba(255, 0, 0, 0.9)); /* Red glow */
 }
 
 .glow-effect-blue {
   filter: drop-shadow(0 0 20px rgba(24, 115, 165, 0.9)); /* Blue glow */
+}
+
+.glow-effect-yellow {
+  z-index: 0;
+  filter: drop-shadow(0 0 10px rgba(255, 214, 39, 0.6)); /* Yellow glow */
+}
+
+.glow-effect-yellow-2 {
+  z-index: 0;
+  filter: drop-shadow(0 0 10px rgba(255, 195, 26, 0.6)); /* Yellow glow */
+}
+
+.glow-effect-purple {
+  z-index: 0;
+  filter: drop-shadow(0 0 10px rgba(131, 55, 216, 0.6)); /* Purple glow */
 }
 
 .glow-effect-2 {
