--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -133,6 +133,28 @@
   }
 }
 
+@keyframes color-shift-5 {
+  0% {
+    color: #eab30d; 
+    text-shadow: 0 0 140px rgba(234, 179, 13, 1);
+  }
+  100% {
+    color: #f4dc84; 
+    text-shadow: 0 0 140px rgba(234, 179, 13, 1);
+  }
+}
+
+@keyframes color-shift-6 {
+  0% {
+    color: #8337d8; 
+    text-shadow: 0 0 140px rgba(131, 55, 216, 1);
+  }
+  100% {
+    color: #582c8c; 
+    text-shadow: 0 0 140px rgba(131, 55, 216, 1);
+  }
+}
+
 .progress-container {
   width: 100%;
   height: 20px;
@@ -180,9 +202,20 @@
 .glow-effect-text-5 {
   animation: color-shift-4 2s infinite alternate;
   font-weight: bold;
-  text-shadow: 0 0 8px rgba(234, 179, 13, 0.9); /* Glow effect for text*/
+  text-shadow: 0 0 50px rgba(234, 179, 13, 0.9); /* Glow effect for text*/
 }
 
+.glow-effect-text-6 {
+  animation: color-shift-5 2s infinite alternate;
+  font-weight: bold;
+  text-shadow: 0 0 50px rgba(234, 179, 13, 0.9); /* Glow effect for text*/
+}
+
+.glow-effect-text-7 {
+  animation: color-shift-6 2s infinite alternate;
+  font-weight: bold;
+  text-shadow: 0 0 50px rgba(131, 55, 216, 0.9); /* Glow effect for text*/
+}
 
 .glow-effect-stop {
   color: #fff;
