--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -155,6 +155,19 @@
   }
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05); /* Aumenta para 105% */
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 .progress-container {
   width: 100%;
   height: 20px;
