--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -165,6 +165,58 @@
 }
 
 
+@keyframes anime {
+  0% {
+    background-position: 0% 40%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+
+.animated-button{
+  background-image: linear-gradient(
+    270deg,
+    rgba(234, 179, 13, 0.9),
+    rgba(131, 55, 216, 0.9)
+  );
+  background-size: 400% 400%;
+  animation: anime 10s linear infinite alternate;
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-slideInLeft {
+  animation: slideInLeft 0.5s ease-out;
+}
+
+@keyframes slideOutLeft {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+
+.animate-slideOutLeft {
+  animation: slideOutLeft 0.5s ease-out forwards; /* Adicione 'forwards' para manter o último estado */
+}
+
 .progress-container {
   width: 100%;
   height: 20px;
