--- a/crewards-v2/src/css/LoadingScreen.css
+++ b/crewards-v2/src/css/LoadingScreen.css
@@ -1,16 +1,15 @@
 .loading-screen {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
-    background-color: black;
-    transition: opacity 1s ease;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 55;
-    overflow: hidden;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: black;  /* Cor de fundo sempre preta */
+  transition: opacity 1s ease;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 55;
+  overflow: hidden;
+}
