--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -1,3 +1,8 @@
+/* tailwind */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* dropdownprofile */
 .dropDownProfile {
   position: absolute;
@@ -12,11 +17,6 @@
   border: 1px solid #333;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Sombra */
 }
-
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @media (min-width: 390px) and (max-width: 890px) {
   .custom-mt {
