--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -555,3 +555,13 @@ li {
   box-shadow: inset 0px 1px 2px rgba(169, 169, 169, 0.5),
     /* Sombra cinza na parte superior */ inset -1px -1px 2px rgba(0, 0, 0, 0.6); /* Sombra preta na parte inferior */
 }
+
+.background-0 {
+  background-image: url("/Background-0.png") !important;
+  z-index: 1;
+}
+
+.glows {
+  background-image: url("/Glows.png") !important;
+  z-index: 1;
+}
