--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -565,3 +565,7 @@ li {
   background-image: url("/Glows.png") !important;
   z-index: 1;
 }
+
+.group {
+  background-image: url('/Group.png') !important;
+}
