--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -462,23 +462,23 @@
 /* Chrome, Safari and other WebKit navs */
 ::-webkit-scrollbar {
   width: 8px;
-  background-color: #060505; /* background color */
+  background-color: #0e0e0e; /* background color */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #2c2c2c; /* Slide color */
+  background-color: #191919; /* Slide color */
   border-radius: 10px;
   transition: background-color 0.3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #444444; /* Hover color */
+  background-color: #2c2c2c; /* Hover color */
 }
 
 /* Firefox */
 .scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: #2c2c2c #060505; /* Color on slide and background */
+  scrollbar-color: #191919 #0e0e0e; /* Color on slide and background */
 }
 
 .shadow-1 {
@@ -568,4 +568,73 @@ li {
 
 .group {
   background-image: url("/Group.png") !important;
+}
+
+.money {
+  background-image: url("/fundo-1.png") !important;
+}
+
+/* From Uiverse.io by ArturCodeCraft */
+/* <style for bg> ======== */
+.background {
+  border-radius: 16px;
+  border: 1px solid #1a1a1a;
+  background: rgba(48, 48, 48, 0.39);
+  mix-blend-mode: luminosity;
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(15px);
+  width: 65px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* <style for menu__icon> ======== */
+.menu__icon {
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu__icon span {
+  width: 100%;
+  height: 0.125rem;
+  border-radius: 0.125rem;
+  background-color: rgb(0, 122, 255);
+  box-shadow: 0 0.5px 2px 0 hsla(0, 0%, 0%, 0.2);
+  transition: transform 0.4s ease, background-color 0.4s ease, opacity 0.4s ease;
+}
+
+/* Estilo para o "X" ao abrir o menu */
+.menu__icon .open.top {
+  background-color: rgb(85, 85, 85);
+  transform: translateY(11px) rotate(-45deg);
+}
+
+.menu__icon .open.middle {
+  transform: translateX(-50%);
+  opacity: 0;
+}
+
+.menu__icon .open.bottom {
+  background-color: rgb(85, 85, 85);
+  transform: translateY(-11px) rotate(45deg);
+}
+
+/* Estilo normal (hambúrguer) */
+.menu__icon span:nth-child(1) {
+  background-color: rgb(85, 85, 85);
+}
+
+.menu__icon span:nth-child(2) {
+  background-color: rgb(85, 85, 85);
+}
+
+.menu__icon span:nth-child(3) {
+  background-color: rgb(85, 85, 85);
 }
