--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -638,3 +638,59 @@ li {
 .menu__icon span:nth-child(3) {
   background-color: rgb(85, 85, 85);
 }
+
+/* From Uiverse.io by catraco */
+/*------ Settings ------*/
+.container-1 {
+  --color: #5a5a5a;
+  --size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  font-size: var(--size);
+  user-select: none;
+  fill: var(--color);
+}
+
+.container-1 .clipboard {
+  position: absolute;
+  animation: keyframes-fill 0.5s;
+}
+
+.container-1 .clipboard-check {
+  position: absolute;
+  display: none;
+  animation: keyframes-fill 0.5s;
+}
+
+/* ------ On check event ------ */
+.container-1 input:checked ~ .clipboard {
+  display: none;
+}
+
+.container-1 input:checked ~ .clipboard-check {
+  display: block;
+}
+
+/* ------ Hide the default checkbox ------ */
+.container-1 input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* ------ Animation ------ */
+@keyframes keyframes-fill {
+  0% {
+    transform: rotate(0deg) scale(0);
+    opacity: 0;
+  }
+
+  50% {
+    transform: rotate(-10deg) scale(1.2);
+  }
+}
