--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -556,6 +556,11 @@ li {
     /* Sombra cinza na parte superior */ inset -1px -1px 2px rgba(0, 0, 0, 0.6); /* Sombra preta na parte inferior */
 }
 
+.shadow-button-1 {
+  box-shadow: inset 0px 1px 1px rgba(116, 116, 116, 0.5),
+    /* Sombra cinza na parte superior */ inset 0px 1px 1px rgba(0, 0, 0, 0.6); /* Sombra preta na parte inferior */
+}
+
 .background-0 {
   background-image: url("/Background-0.png") !important;
   z-index: 1;
