--- a/crewards-v2/src/css/index.css
+++ b/crewards-v2/src/css/index.css
@@ -440,8 +440,11 @@ li {
 }
 
 .shadow-button {
-  box-shadow: inset 0px 1px 2px rgba(169, 169, 169, 0.5),
-    /* Sombra cinza na parte superior */ inset -1px -1px 2px rgba(0, 0, 0, 0.6); /* Sombra preta na parte inferior */
+  box-shadow: inset 0px 1px rgb(60, 60, 60); /* Sombra preta na parte inferior */
+}
+
+.shadow-button-red {
+  box-shadow: inset 0px 1px rgb(218, 71, 96); /* Sombra preta na parte inferior */
 }
 
 .shadow-button-1 {
